2003-01-28  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-gz.[ch]: New handle type, capable of reading SVGZ files.
	Not built currently, but will soon be conditionally compiled in.
	* *: Groundwork needed for the above (method virtualization)
	
2003-01-27  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c (parse_cssbuffer): Allow multiple declarations to be 
	additive ( H1 { font-weight: bold } H1 { font-family: Times } now 
	evaluate properly to H1 { font-weight: bold ; font-family: Times })
	
=== librsvg 2.2.1 ===
	
2003-01-27  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (): Patheticly handle conical gradients (not part of SVG spec,
	but that doesn't stop KIllustrator/Kontour...), work on 
	gradientTransform as well as spreads on radialGradients	
	
2003-01-27  Dom Lachowicz <cinamod@hotmail.com>

	* *: Fix a bunch of brokenness caused by Sodipodi's handling of gradients. Output still doesn't look quite right, though, unfortunately....
	
2003-01-26  Dom Lachowicz <cinamod@hotmail.com>

	* *: Support CSS id as well as class, style
	
2003-01-23  Dom Lachowicz <cinamod@hotmail.com>

	* test-rsvg.c : Support a JPEG quality argument [1-100]
	
2003-01-21  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Better manpage installation.

=== librsvg 2.2.0 ===
	
2003-01-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.2.0

2003-01-16  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.1: Improve manual page

	* test-rsvg.c: Support .jpg as well as .jpeg as JPEG format specifier
	
2003-01-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-XXX.c (*): Rework css_parse_normalized_length to "properly" 
	handle "ex" units (i.e. handle them how ImageMagick handles them)
	
2003-01-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c (rsvg_parse_style_attrs): Also honor the "*" style
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.1 : New man page, gets installed
	* configure.in : Post release version number bump -> 2.1.6
	